feat(JDK24): JEP483: Ahead-of-Time Class Loading & Linking - add scripts and app trainer for aot caching